# Renegade

./: .gitignore  CMakeLists.txt  GameLevel.txt  README.md  defaults.ini
Levels/: GameLevel.json
Models/: Ammo.h2b  Ammo.mtl  Armor_Spaceship_1_0.h2b  Background.h2b  Background.mtl  BossOne.h2b  BossOne.mtl  BossThree.mtl  BossThreeInvulnerableTop.h2b  BossThreeInvulnerableTop.mtl  BossThreeVulnerableTop.h2b  BossThreeVulnerableTop.mtl  BossTwo.mtl  Bullet.h2b  Bullet.mtl  EnemyBullet.h2b  EnemyFive.h2b  EnemyFive.mtl  EnemyFour.h2b  EnemyFour.mtl  EnemyLazer.h2b  EnemyLazer.mtl  EnemyOne.mtl  EnemySeven.h2b  EnemySeven.mtl  EnemySix.h2b  EnemySix.mtl  EnemyThree.h2b  EnemyThree.mtl  EnemyTwo.h2b  EnemyTwo.mtl  Explosion.h2b  Explosion.mtl  Gate+engine_gate+engine_0.h2b  Gate+engine_gate+engine_0.mtl  Guns_Spaceship_1_0.h2b  Hatch_Spaceship_1_0.h2b  Heart.h2b  Heart.mtl  Player.h2b  (+13 more)
Models/New Models/: Bullet.h2b
Models/New Models/62-intergalactic-spaceship_blender_2.79b_cycles_packed-textures/: Intergalactic Spaceship_Blender_2.79b_Cycles_Packed textures.gltf  Intergalactic_Spaceship-(Wavefront).h2b
Models/New Models/Intergalactic_Spaceships_Version_2/: Intergalactic_Spaceships_Version_2.h  Intergalactic_Spaceships_Version_2.h2b
Models/New Models/freeport_space_station/: scene.gltf
Models/New Models/health_item/: license.txt  scene.gltf
Models/New Models/johnathan_ItemPickups/pickupitems_obj/Textures/: Thumbs.db
Models/New Models/johnathan_ItemPickups/pickupitems_obj/Textures/Masks/: Thumbs.db
Models/New Models/maquis_fighter/: license.txt  scene.gltf
Models/New Models/providence_captive_transport_space_ship/: license.txt  scene.gltf
Models/New Models/sci-fi_ammo_box/: license.txt  scene.gltf
Models/New Models/spaceship_ezno_gltf/: scene.gltf
Models/New Models/superstructurecraft_gltf/: scene.gltf
Shaders/: LevelPixel.hlsl  LevelVertex.hlsl  OverlayFragment.hlsl  OverlayVertex.hlsl
Source/: TextureUtils.h  TextureUtilsKTX.h  main.cpp  precompiled.h
Source/AI/: AIComponents.h  AIDirector.cpp  FormationPatterns.h  SpawnHelpers.h
Source/APP/: Window.hpp
Source/AUDIO/: AudioComponents.h  AudioManager.cpp  AudioSystem.h
Source/DRAW/: DrawComponents.h  LevelComponents.cpp  VulkanBuffers.cpp  VulkanRenderer.cpp
Source/DRAW/Utility/: FileIntoString.cpp  FileIntoString.h  h2bParser.h  load_data_oriented.h
Source/GAME/: DamageTypes.h  GameComponents.h  GameManager.cpp  ItemDropSystem.cpp  ItemPickupComponents.cpp  ItemPickupComponents.h  Player.cpp  ShieldComponents.h  ShieldSystem.cpp  StateManager.cpp  WeaponComponents.h  WeaponSystem.cpp
Source/SB/: scoreboard.hpp
Source/UI/: BLIT_Font.h  Font.h  Overlay.h  UIAssets.h  UIComponents.h  UIManager.cpp
Source/UTIL/: Utilities.cpp  Utilities.h
entt-3.13.1/single_include/entt/: entt.hpp
gateware-main/: Gateware.h
